--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -5,8 +5,7 @@ RUN CGO_ENABLED=0 go build -o /bin/docatl
 
 FROM alpine:latest
 RUN apk update \
-    && apk add -U --no-cache ca-certificates \
-    && update-ca-certificates
+    && apk add -U --no-cache ca-certificates
 COPY --from=build /bin/docatl /bin/docatl
 WORKDIR /docs
 ENTRYPOINT [ "/bin/docatl" ]
