--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -14,13 +15,7 @@ builds:
       - arm64
     binary: docatl
 archives:
-  - format: binary
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - formats: ['binary']
 dockers:
   - dockerfile: "Dockerfile"
     image_templates:
@@ -49,7 +44,7 @@ dockers:
 checksum:
   name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
